<resources>
    <string name="app_name">Vinyls Mockups</string>
    <string name="navigation_drawer_open">Open Navigation</string>
    <string name="navigation_drawer_close">Close Navigation</string>
    <string name="continue_login">Continue</string>
    <string name="terms">By clicking continue, you agree to our Terms of Service and Privacy Policy</string>
    <string name="search_artist">Buscar artista</string>
    <string name="search_album">Buscar album</string>
    <string name="artists">Artistas</string>
    <string name="bruno_mars">Bruno Mars</string>
    <string name="michael_jackson">Michael Jackson</string>
    <string name="dua_lipa">Dua Lipa</string>
    <string name="rosalia">Rosalía</string>
    <string name="albums">Álbumes</string>
    <string name="abbeyroad">Abbey Road</string>
    <string name="beatles">The Beatles</string>
    <string name="kindofblue">Kind of Blue</string>
    <string name="miles">Miles Davis</string>
    <string name="awards">Premios</string>
    <string name="bestcolab">Mejor colaboración</string>
    <string name="mostlisten">Artista más escuchado</string>
    <string name="reveal">Artista revelación</string>
    <string name="bestartist">Mejor Artista del año</string>
    <string name="michaelhistory">HIStory: Past, Present and Future, Book I</string>
    <string name="canvas">Canvas</string>
    <string name="motomami">Motomami</string>
    <string name="sabrina">Sabrina Carpenter</string>
    <string name="shortnsweet">Short n\' Sweet</string>
    <string name="galdive">Galdive</string>
    <string name="unitedstates">Estados Unidos</string>
    <string name="albania">Albania</string>
    <string name="indonesia">Indonesia</string>
    <string name="spain">España</string>
    <string name="gobacktoartists">Volver a la lista de artistas</string>
    <string name="addalbum">Agregar álbum</string>
    <string name="biography">Biografía</string>
    <string name="sabrinabio">Sabrina Carpenter (nacida el 11 de mayo de 1999) es una cantante, actriz y compositora estadounidense. Comenzó su carrera en Disney Channel con la serie Girl Meets World y luego se enfocó en la música, destacando con álbumes como Emails I Can’t Send (2022). Su estilo pop y su talento vocal la han convertido en una de las artistas jóvenes más prometedoras de la industria.</string>
    <string name="songs">Canciones</string>
    <string name="assignartist">Asignar artista</string>
    <string name="description">Descripción</string>
    <string name="descabbeyroad">Abbey Road es el duodécimo álbum de estudio (décimo-tercero en estados unidos) publicado por la banda británica de rock The Beatles, sería lanzado el 26 de septiembre de 1969 en Reino Unido por Apple Records.</string>
    <string name="octopus"><u>Octopus Garden</u></string>
    <string name="ohdarling"><u>Oh! Darling</u></string>
    <string name="cometogether"><u>Come Together</u></string>
    <string name="galdivebio">Galdive es un dúo musical indie-pop originario de Indonesia, formado por Osvaldo Nugroho y Tanisha Salim. Su sonido combina elementos de jazz, electrónica y pop alternativo, creando una atmósfera etérea y relajante. Se dieron a conocer con canciones como Cloud y Lotus, ganando reconocimiento internacional por su estilo único y sofisticado.</string>
    <string name="rosaliabio">Rosalía (nacida el 25 de septiembre de 1992) es una cantante, compositora y productora española conocida por su fusión de flamenco con géneros como el pop y la música urbana. Saltó a la fama con El Mal Querer (2018), que incluía éxitos como Malamente. Su estilo innovador la ha convertido en una artista global, destacando con álbumes como Motomami (2022).</string>
    <string name="dualipabio">Dua Lipa (nacida el 22 de agosto de 1995) es una cantante, compositora y modelo británica de origen albanokosovar. Saltó a la fama con su álbum debut Dua Lipa (2017), que incluyó éxitos como New Rules. Su segundo álbum, Future Nostalgia (2020), consolidó su éxito con canciones como Don\'t Start Now y Levitating.</string>
    <string name="michaelbio">Michael Jackson (29 de agosto de 1958 – 25 de junio de 2009) fue un cantante, compositor y bailarín estadounidense, considerado una de las figuras más influyentes en la historia de la música. Conocido como el "Rey del Pop", revolucionó la industria con álbumes icónicos como Thriller, Bad y Dangerous.</string>
    <string name="brunobio">Bruno Mars, nacido como Peter Gene Hernández el 8 de octubre de 1985 en Honolulu, Hawái, es un cantante, compositor, productor y multiinstrumentista estadounidense. Conocido por su estilo ecléctico que mezcla pop, R&amp;B, funk y soul, alcanzó el éxito mundial con éxitos como "Just the Way You Are", "Uptown Funk" y "24K Magic".</string>
    <string name="despecha">DESPECHÁ   •	 MOTOMAMI  •	 (2022)</string>
    <string name="conaltura">Con Altura  •  Con Altura  •	  (2019)</string>
    <string name="yoxti">Yo x Ti, Tu x Mi  •  Yo x Ti…  (2019)</string>
    <string name="cloud">Cloud   •	 Cloud  •	 (2019)</string>
    <string name="lotus">Lotus  •  Lotus  •	  (2018)</string>
    <string name="afriend">A friend  •  A friend  (2021)</string>
    <string name="levitating">Levitating   •	 Future Nos…  •	 (2020)</string>
    <string name="handlebars">Handlebars  •  Ruby  •	  (2025)</string>
    <string name="coldheart">Cold Heart  •  The Lockdo…  (2021)</string>
    <string name="billiejean">Billie Jean  •  Thriller  •  (1982)</string>
    <string name="thriller">Thriller  •  Thriller  •  (1982)</string>
    <string name="beatit">Beat it  •  Thriller  •  (1982)</string>
    <string name="apt">APT  •  Rosie  •  (2025)</string>
    <string name="lazysong">The Lazy Song  •  Bruno  •  (2010)</string>
    <string name="uptown">Uptown Funk  •  I Love P…  •  (2015)</string>

</resources>