<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".BaseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/app_background"
        app:contentInsetEnd="25dp"
        app:contentInsetStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/logo" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/burger_vector" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingHorizontal="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/search_bar"
            android:drawableStart="@drawable/search_icon"
            android:drawablePadding="8dp"
            android:hint="@string/search_album"
            android:inputType="text"
            android:paddingHorizontal="12dp"
            android:textColorHint="@color/light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/album1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_bar">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/abbeyNavigate"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/abbeyroad"
                app:shapeAppearanceOverlay="@style/roundedImageViewSemiRounded" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/abbeyroad"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/beatles"
                android:textColor="@color/light_gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/album2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_bar">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/michaelNavigate"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/michaelhistory"
                app:shapeAppearanceOverlay="@style/roundedImageViewSemiRounded" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/michaelhistory"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="9sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/michael_jackson"
                android:textColor="@color/light_gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/album3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/album1">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/dualipaNavigate"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/dualipa"
                app:shapeAppearanceOverlay="@style/roundedImageViewSemiRounded" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/dua_lipa"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/dua_lipa"
                android:textColor="@color/light_gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/album4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/album2">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/galdiveNavigate"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/canvas"
                app:shapeAppearanceOverlay="@style/roundedImageViewSemiRounded" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/canvas"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/galdive"
                android:textColor="@color/light_gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/album5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/album3">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/rosaliaNavigate"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/motomami"
                app:shapeAppearanceOverlay="@style/roundedImageViewSemiRounded" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/motomami"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/rosalia"
                android:textColor="@color/light_gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/album6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/album4">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/sabrinaNavigate"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/shortnsweet"
                app:shapeAppearanceOverlay="@style/roundedImageViewSemiRounded" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/shortnsweet"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/sabrina"
                android:textColor="@color/light_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:src="@drawable/back_vector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:text="1"
                android:textColor="@color/button_red"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:text="2"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:text="3"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/next_vector" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>