<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".BaseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/app_background"
        app:contentInsetEnd="25dp"
        app:contentInsetStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/logo" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/burger_vector" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">


        <ImageView
            android:id="@+id/artist_banner"
            android:layout_width="0dp"
            android:layout_height="300dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/bruno_mars"
            android:scaleType="centerCrop"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/artist_banner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/goback"/>

            <LinearLayout
                android:id="@+id/artist_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/artist_banner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:gravity="">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bruno_mars"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unitedstates"
                        android:textColor="@color/light_gray"
                        android:textSize="16dp"/>
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/add_circle"
                        app:layout_constraintEnd_toStartOf="@id/addalbum"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginEnd="5dp"/>

                    <TextView
                        android:id="@+id/addalbum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addalbum"
                        android:textSize="16dp"
                        android:textColor="@color/font_yellow"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        <LinearLayout
            android:id="@+id/biography"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            app:layout_constraintTop_toBottomOf="@id/artist_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biography"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brunobio"
                android:textColor="@color/light_gray"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="8dp"
                android:textSize="12dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/biography"
            app:layout_constraintBottom_toTopOf="@id/goback"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/songs"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_marginEnd="32dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/albums"
                    android:textColor="@color/light_gray"
                    android:textSize="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="12dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/apt"
                    app:shapeAppearanceOverlay="@style/roundedImageViewSemiRounded"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apt"
                    android:textColor="@color/light_gray"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="12dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="12dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/lazysong"
                    app:shapeAppearanceOverlay="@style/roundedImageViewSemiRounded"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lazysong"
                    android:textColor="@color/light_gray"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="12dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="12dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/uptown"
                    app:shapeAppearanceOverlay="@style/roundedImageViewSemiRounded"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uptown"
                    android:textColor="@color/light_gray"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="12dp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/goback"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:src="@drawable/goback_vector" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:text="@string/gobacktoartists"
                android:textColor="@color/button_red"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>